Bump versions of Gradle, JavaFX, TestFX, JUnit